--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TablesApp</string>
+    <string name="web_client_id">552735497226-hpt6dtaet8um09rf6sc73h92u05rmsua.apps.googleusercontent.com</string>
 </resources>
